# mie-decoder

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  sonarcloud.yml
config/: default.toml
docs/: ARCHITECTURE.md  CLI-REFERENCE.md  CONFIG-REFERENCE.md  DATA-SCENARIOS.md  ERROR-CATALOG.md  EXAMPLES.md  FIELDS.md  L1-REQ.md  L2-REQ.md  L3-REQ.md  MAINTAINER-GUIDE.md  MIE-FORMAT.md  REQUIREMENTS.md  ROADMAP.md  TRACE-MATRIX.md  USER-GUIDE.md  VENDOR-CSV-DIFFS.md
docs/diagrams/: class.puml  component.puml  dataflow.puml
python/: README.md  pyproject.toml
python-reference/: pyproject.toml
python-reference/src/mie_decoder/: __init__.py  __main__.py  cli.py  decode.py  logger.py  models.py  reader.py  sync.py  writer.py
python-reference/tests/: test_e2e.py  test_exceptions.py  test_sync.py
python/src/mie_decoder/: __init__.py  cli.py  config.py  decode.py  dump.py  exceptions.py  filters.py  logger.py  merge.py  models.py  reader.py  sync.py  writer.py
python/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_conformance_wiring.py  test_decode.py  test_e2e.py  test_exceptions.py  test_merge.py  test_models.py  test_mux.py  test_package_api.py  test_readme_examples.py  test_sync.py  test_writer_streaming_golden.py  test_writer_streaming_memory.py  test_writer_streaming_primitives.py  test_writer_streaming_split.py
python/tests/golden/py_streaming/: inline.csv  split_errors.csv  split_main.csv
rust/: Cargo.toml  README.md  deny.toml
rust/.cargo/: config.toml
rust/examples/: library_usage.rs
rust/src/: cli.rs  config.rs  decode.rs  dump.rs  filter.rs  lib.rs  log.rs  merge.rs  models.rs  reader.rs  sync.rs  writer.rs
rust/tests/: cli.rs  integration.rs
scripts/: build-trace-matrix.py  coverage.sh  install-hooks.sh  pytest-by-requirement.py
src/: cli.rs  config.rs  decode.rs  dump.rs  error.rs  filter.rs  lib.rs  log.rs  merge.rs  models.rs  reader.rs  sync.rs  writer.rs
tests/: cli.rs  integration.rs
tests/conformance/: README.md  config_fuzz.py  config_parity.py  manifest.json  run.py
tests/conformance/configs/: array-of-tables.toml  collapse-duplicates.toml  dotted-key.toml  dotted-section-header.toml  duplicate-key.toml  duplicate-section.toml  exclude-transmit.toml  exclude-types-int.toml  invalid-time-format.toml  log-level-info.toml  log-level-off.toml  non-string-time-format.toml  section-as-scalar.toml  standard-tick-rate.toml  strict.toml
tests/conformance/expected/: bus-b.csv  config-filter.csv  delta-tracking-irig.csv  empty-recording.csv  errors-inline.csv  errors-separate.csv  errors-separate_errors.csv  header-and-sync-recovery.csv  lookahead-corruption-chain-n2.csv  lookahead-corruption-chain-n4.csv  merge-collapse-cross-recorder.csv  merge-non-monotonic-within-file.csv  merge-ordered.csv  mode-code-bcast-data.csv  mode-code-bcast-no-data.csv  mode-code-no-data.csv  mode-code-rx-data.csv  mode-code-tx-data.csv  mode-code-tx-no-data.csv  multi-record-then-terminator.csv  mux-from-filename.csv  mux-merge-per-file.csv  receive-broadcast.csv  rt-to-rt-broadcast.csv  rt-to-rt.csv  single-file-non-monotonic.csv  single-record-then-terminator.csv  spurious-standalone.csv  standard-mode-code-data.csv  standard-tick-calibrated.csv  standard-timestamps.csv  timestamp-format-borderline-default.csv  timestamp-format-borderline-n1.csv
tests/conformance/inputs/: basic-multi-record.hex  bus-b.hex  count-one.hex  delta-tracking-irig.hex  empty-recording.hex  errors-inline.hex  first-record-truncated.hex  header-and-sync-recovery.hex  homogeneous-payload.hex  invariant-direction-mismatch.hex  invariant-rt-to-rt-cmd2-mismatch.hex  lookahead-corruption-chain.hex  merge-a.hex  merge-b.hex  merge-freerun.hex  merge-garbage.hex  merge-non-monotonic.hex  mode-code-bcast-data.hex  mode-code-bcast-no-data.hex  mode-code-no-data.hex  mode-code-rx-data.hex  mode-code-tx-data.hex  mode-code-tx-no-data.hex  multi-record-then-terminator.hex  no-valid-records.hex  partial-unrecoverable.hex  receive-broadcast.hex  rt-to-rt-broadcast.hex  rt-to-rt.hex  single-file-non-monotonic.hex  single-record-then-terminator.hex  spurious-standalone.hex  standard-mode-code-rx-data.hex  standard-timestamps.hex  strict-rejects-irig-range.hex  timestamp-format-ambiguous.hex  timestamp-format-borderline.hex
