[project]
name = "mie-decoder"
version = "1.4.0"
description = "Decoder for DDC MIL-STD-1553 MIE binary recording files"
authors = [
    { name = "Joey" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
dependencies = [
    "pandas>=2.0,<3.0",
    "tomli>=2.0,<3.0; python_version < '3.11'",
]

[project.scripts]
mie-decoder = "mie_decoder.cli:main"

[tool.poetry]
packages = [{include = "mie_decoder", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "requirement(req_id): tag a test with the L1/L2/L3 requirement id it verifies (see docs/L1-REQ.md, L2-REQ.md, L3-REQ.md)",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

# Coverage gate parallels the Rust crate's cargo-llvm-cov gate (70%
# line + 70% region in .cargo/config.toml's `cov-ci` alias). Baseline
# at integration time was ~89% combined line+branch across the 245
# pytest cases, so the 85% combined floor gives ~4 percentage points
# of headroom before CI starts failing. Bump up after a few weeks of
# stable readings if we want stricter.
#
# __main__.py is the entry shim (python -m mie_decoder) — three-line
# wrapper around cli.main(), uncoverable without spawning a child
# process. Mirrors the Rust exclusion of bin/mie-decoder.rs.
[tool.coverage.run]
source = ["mie_decoder"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
