[project]
name = "mie-decoder"
version = "2.5.1"
description = "Decoder for DDC MIL-STD-1553 MIE binary recording files"
authors = [
    { name = "Joey" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
dependencies = [
    "tomli>=2.0,<3.0; python_version < '3.11'",
]

[project.scripts]
mie-decoder = "mie_decoder.cli:main"

[tool.poetry]
packages = [{include = "mie_decoder", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^7.0"
mypy = "^1.13"
pylint = "^4.0.6"
ruff = "^0.15.20"
vulture = "^2.16"
bandit = "^1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "requirement(req_id): tag a test with the L1/L2/L3 requirement id it verifies (see docs/L1-REQ.md, L2-REQ.md, L3-REQ.md)",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

# `tomli` (the 3.10 TOML backport, conditionally imported in config.py)
# is not installed in the dev/type-check environment and is not part of
# our typed surface, so treat its import as untyped rather than vendoring
# stubs.
[[tool.mypy.overrides]]
module = ["tomli"]
ignore_missing_imports = true

# Coverage gate parallels the Rust crate's cargo-llvm-cov gate
# (rust/.cargo/config.toml's `cov-ci` alias, 84 line / 83 region). The
# combined line+branch coverage has held ~90% for several releases, so
# the floor is ratcheted to baseline-2pp (88%), matching the Rust ratchet
# rationale. `fail_under` below is the single source of truth — CI runs
# `pytest --cov` and the gate fails the build automatically.
#
# __main__.py is the entry shim (python -m mie_decoder) — three-line
# wrapper around cli.main(), uncoverable without spawning a child
# process. Mirrors the Rust exclusion of rust/src/bin/mie-decoder.rs.
[tool.coverage.run]
source = ["mie_decoder"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 88

# Pylint lints the package source (src/mie_decoder). Genuine correctness/hygiene
# checks stay on; checks that conflict with deliberate design choices or
# duplicate SonarCloud are disabled below. Run: `poetry -C python run pylint src`.
[tool.pylint.basic]
# Keep pylint's default "good" short names and allow `tomllib` — the module
# alias for the TOML backend (mirrors the stdlib module name; config.py binds
# it to tomllib/tomli/None across Python versions).
good-names = ["i", "j", "k", "ex", "Run", "_", "tomllib"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    # The codebase uses function-local imports on purpose, to avoid import
    # cycles and keep CLI startup cheap (mirrors the Rust crate's structure).
    "import-outside-toplevel",
    # Size/complexity heuristics with low default thresholds. A binary decoder
    # is legitimately branchy, and cognitive complexity is already gated by
    # SonarCloud (python:S3776) — keeping these would be duplicate, lower-signal
    # noise.
    "too-many-branches",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-statements",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-instance-attributes",
    "too-many-lines",
    # `not (a <= x <= b)` parenthesization is kept for readability.
    "superfluous-parens",
    # Single-responsibility helper classes (e.g. the merge dedup window) are
    # legitimately one-method; this check is noise for them.
    "too-few-public-methods",
]

# Ruff formats and lints the Python package + tests. Line length matches the
# pylint gate (100); the default lint ruleset (E/F) is kept and the formatter
# owns code style. Run: `poetry -C python run ruff format` / `ruff check`.
[tool.ruff]
line-length = 100
target-version = "py310"

# Vulture finds dead code. Scan src + tests together so test usage counts (a
# function used only by tests is not "dead"). The ignored names are intentional:
# `option_string` is the argparse Action.__call__ interface arg; the two
# constants are documented module reference values (MAX_RECORD_BYTES is also in
# docs/diagrams/class.puml) that stay part of the surface though unused in-tree.
# Run: `poetry -C python run vulture`.
[tool.vulture]
paths = ["src", "tests"]
ignore_names = ["option_string", "MAX_RECORD_BYTES", "ALL_KNOWN_ERROR_CODES"]
