[package]
name = "mie-decoder"
version = "2.4.0"
edition = "2024"
rust-version = "1.88"
description = "Decoder for DDC MIL-STD-1553 MIE binary recording files"
license = "MIT"
authors = ["Joey"]
readme = "README.md"

# cargo-semver-checks lint policy. `DecoderConfig` and `ConfigOverrides`
# (src/config.rs) are internal config plumbing — nothing outside the crate
# constructs them, and the stable public API is the `lib.rs` re-exports. They are
# `#[doc(hidden)]` so their growing field set is excluded from the SemVer
# contract; this `allow` accepts the one-time doc-hidden transition in v2.5.0
# (the gate still guards the real public API). See L1-MRG-003 / L2-MRG-007.
[package.metadata.cargo-semver-checks.lints]
struct_now_doc_hidden = "allow"

[lib]
name = "mie_decoder"
path = "src/lib.rs"

[[bin]]
name = "mie-decoder"
path = "src/bin/mie-decoder.rs"

[dependencies]
memmap2 = "0.9"

# Lint policy lives here so plain `cargo build` / `cargo clippy` enforce it, not
# just the CI flags. All three pass clean today; they formalize practices the
# crate already follows (the CI `clippy -- -D warnings` gate still applies on
# top of these).
[lints.rust]
# Require an explicit `unsafe {}` block for unsafe operations inside an
# `unsafe fn` (warn-by-default in edition 2024; denied here).
unsafe_op_in_unsafe_fn = "deny"
# Flag `pub` items that aren't reachable from the crate root — they should be
# `pub(crate)`. Keeps the public API surface intentional.
unreachable_pub = "deny"

[lints.clippy]
# Every `unsafe {}` block must carry a `// SAFETY:` comment. Promotes the
# repo's existing SAFETY-comment convention (also grep-checked by the
# pre-commit hook) from a heuristic to a real lint.
undocumented_unsafe_blocks = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
